PR29255, memory leak in make_tempdir

PR 29255
	* bucomm.c (make_tempdir, make_tempname): Free template on all
	failure paths.